@@ -1978,7 +1978,7 @@ static label labels[168] = {
     {258, 0},
     {327, 0},
     {259, 0},
-    {50, 0},
+    {49, 0},
     {289, 0},
     {7, 0},
     {330, 0},
@@ -1990,7 +1990,7 @@ static label labels[168] = {
     {1, "def"},
     {1, 0},
     {263, 0},
-    {51, 0},
+    {50, 0},
     {302, 0},
     {11, 0},
     {301, 0},
@@ -1999,7 +1999,7 @@ static label labels[168] = {
     {22, 0},
     {12, 0},
     {16, 0},
-    {36, 0},
+    {35, 0},
     {266, 0},
     {267, 0},
     {270, 0},
@@ -2016,6 +2016,7 @@ static label labels[168] = {
     {273, 0},
     {336, 0},
     {311, 0},
+    {36, 0},
     {37, 0},
     {38, 0},
     {39, 0},
@@ -2026,8 +2027,7 @@ static label labels[168] = {
     {44, 0},
     {45, 0},
     {46, 0},
-    {47, 0},
-    {49, 0},
+    {48, 0},
     {1, "del"},
     {326, 0},
     {1, "pass"},
@@ -2046,7 +2046,7 @@ static label labels[168] = {
     {1, "import"},
     {288, 0},
     {23, 0},
-    {52, 0},
+    {51, 0},
     {287, 0},
     {285, 0},
     {1, "as"},
@@ -2088,38 +2088,38 @@ static label labels[168] = {
     {310, 0},
     {20, 0},
     {21, 0},
-    {28, 0},
-    {31, 0},
+    {27, 0},
     {30, 0},
     {29, 0},
-    {29, 0},
+    {28, 0},
+    {28, 0},
     {1, "is"},
     {313, 0},
     {18, 0},
     {314, 0},
-    {33, 0},
+    {32, 0},
     {315, 0},
     {19, 0},
     {316, 0},
+    {33, 0},
     {34, 0},
-    {35, 0},
     {317, 0},
     {14, 0},
     {15, 0},
     {318, 0},
     {17, 0},
     {24, 0},
-    {48, 0},
-    {32, 0},
+    {47, 0},
+    {31, 0},
     {319, 0},
     {320, 0},
     {322, 0},
     {321, 0},
     {9, 0},
     {10, 0},
-    {26, 0},
+    {25, 0},
     {328, 0},
-    {27, 0},
+    {26, 0},
     {2, 0},
     {3, 0},
     {1, "None"},
